--- a/templates/index.html
+++ b/templates/index.html
@@ -1,43 +1,71 @@
 {% extends "skeleton.html" %}
 
-{% block title %}FileBin{% endblock %}
+{% block title %}File Pigeon{% endblock %}
 
 {% block main %}
-<form class="container has-text-centered" method="post" enctype="multipart/form-data" action="{{ url_for('new') }}">
-  <h1 class="title">
-    Upload files. Get ten-minute link. Download. Done.
-  </h1>
-  <div class="file is-boxed is-centered">
-    <label class="file-label">
-      <input class="file-input" type="file" multiple name="files" required>
-      <span class="file-cta">
-        <span class="file-icon">
-          <i class="fa fa-upload"></i>
-        </span>
-        <span class="file-label">
-          Choose file(s)...
-        </span>
-      </span>
-    </label>
-  </div>
-  <h2 class="subtitle">
-    Limit {{ max_files }} files. Max {{ max_size }} total.
-  </h2>
-  <input class="button is-link" type="submit" value="Upload">
-</form>
+<div class="container has-text-centered my-1">
+    <h1 class="title">
+	Upload files. Get code. Download. Done.
+    </h1>
 
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-{% for message in messages %}
-<article class="message is-danger my-upload-error">
-  <div class="message-header">
-    <p>Error</p>
-  </div>
-  <div class="message-body">
-    {{ message }}
-  </div>
-</article>
-{% endfor %}
-{% endif %}
-{% endwith %}
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <article class="message is-danger my-upload-error">
+	<div class="message-header">
+	    <p>Error</p>
+	</div>
+	<div class="message-body">
+	    {{ message }}
+	</div>
+    </article>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+    <div class="columns">
+	<div class="column">
+	    <p class="is-size-4 my-1">
+		Upload
+	    </p>
+	    <form class="has-text-centered" method="post" enctype="multipart/form-data" action="{{ url_for('new') }}">
+		<div class="file is-boxed is-centered">
+		    <label class="file-label">
+			<input class="file-input" type="file" multiple name="files" required>
+			<span class="file-cta">
+			    <span class="file-icon">
+				<i class="fa fa-upload"></i>
+			    </span>
+			    <span class="file-label">
+				Choose file(s)...
+			    </span>
+			</span>
+		    </label>
+		</div>
+		<p class="is-size-6 is-italic" style="margin: 0.5rem 0;">
+		    Limit {{ max_files }} files. Max {{ max_size }} total.
+		</p>
+		<input class="button is-link" type="submit" value="Upload">
+	    </form>
+	</div>
+	<div class="column">
+	    <h2 class="is-size-4 my-1">
+		Access
+	    </h2>
+	    <form class="has-text-centered" action="{{ url_for('find') }}">
+		<label class="label">Enter Code</label>
+		<div class="field" style="max-width: 15rem; margin-left: auto; margin-right: auto;">
+		    <p class="control has-icons-left">
+			<input class="input" type="text" name="code" placeholder="Code" required>
+			<span class="icon is-small is-left">
+			    <i class="fa fa-search"></i>
+			</span>
+		    </p>
+		</div>
+		<input class="button is-link" type="submit" value="Search">
+	    </form>
+
+	</div>
+    </div>
+</div>
 {% endblock %}
