feat: update instructional text

--- a/templates/filebin.html
+++ b/templates/filebin.html
@@ -57,9 +57,9 @@
                     <p>Instructions</p>
 		</div>
 		<div class="message-body">
-                    Visit this site in another browser and enter the code <strong>{{ code }}</strong>. Alternatively,
+                    Download individual files or a zip archive here. To share, visit this site in another browser and enter the code <strong>{{ code }}</strong>. Alternatively,
                     copy <a href="{{ url_for('filebin', code=code) }}">this link</a> by right clicking and selecting
-                    "copy link location." Then, share the link however you'd like!
+                    "copy link location."
 		</div>
             </article>
             <article class="message">
