--- a/templates/filebin.html
+++ b/templates/filebin.html
@@ -3,7 +3,7 @@
 {% block title %}File Pigeon{% endblock %}
 
 {% block main %}
-<div class="container my-1">
+<div class="container my-1 flexify-me">
     <div class="columns">
 	<div class="column">
             <article class="message is-danger is-hidden" id="files-deleted-message">
