--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}File Pigeon{% endblock %}
 
 {% block main %}
-<div class="container has-text-centered my-1">
+<div class="container has-text-centered my-1 flexify-me">
     <h1 class="title">
 	Upload files. Get code. Download. Done.
     </h1>
