--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,21 @@
 		<input class="button is-link" type="submit" value="Search">
 	    </form>
 
+	    {% if session['history'] %}
+	    <nav class="panel" style="max-width: 20rem; margin: 1rem auto;">
+		<p class="panel-heading">
+		    previous bins
+		</p>
+		{% for code, _ in session['history'] %}
+		<a class="panel-block" href="{{ url_for('filebin', code=code) }}">
+		    <span class="panel-icon">
+			<i class="fa fa-list" aria-hidden="true"></i>
+		    </span>
+		    {{ code }}
+		</a>
+		{% endfor %}
+	    </nav>
+	    {% endif %}
 	</div>
     </div>
 </div>
