--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 		    </label>
 		</div>
 		<p class="is-size-6 is-italic" style="margin: 0.5rem 0;">
-		    Limit {{ max_files }} files. Max {{ max_size }} total.
+		    Limit {{ max_files }} files. Max {{ max_size }} total. <br> Bins last ten minutes.
 		</p>
 		<input id="upload-submit-button" class="button is-link" type="submit" value="Upload" disabled>
 		<p id="files-selected-text" class="is-size-6" style="margin: 0.5rem 0;"></p>
