fix: normalize site title, update gh link

--- a/templates/filebin.html
+++ b/templates/filebin.html
@@ -1,6 +1,6 @@
 {% extends "skeleton.html" %}
 
-{% block title %}File Pigeon{% endblock %}
+{% block title %}FileBin{% endblock %}
 
 {% block main %}
 <div class="container my-1 flexify-me">
