--- a/templates/skeleton.html
+++ b/templates/skeleton.html
@@ -12,7 +12,7 @@
 
 	<link rel="manifest" href="/manifest.webmanifest">
 
-	<meta name="apple-mobile-web-app-title" content="File Pigeon">
+	<meta name="apple-mobile-web-app-title" content="FileBin">
 	<link rel="apple-touch-icon" href="{{ url_for('static', filename='favicon.png') }}">
 
 	<style>
@@ -70,7 +70,7 @@
 			    </span>
 			    <span>About</span>
 			</a>
-			<a class="navbar-item" href="https://github.com/russon77/filebin">
+			<a class="navbar-item" href="https://github.com/tristanmkernan/filebin">
 			    <span class="icon">
 				<i class="fa fa-github"></i>
 			    </span>
