--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "skeleton.html" %}
 
-{% block title %}File Pigeon{% endblock %}
+{% block titlef %}FileBin{% endblock %}
 
 {% block main %}
 <div class="container has-text-centered my-1 flexify-me">
